--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -6,50 +6,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lab1</title>
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body >
-    <div class="bg">
-      <!--<img src="images/b2IL086TVms.jpg" alt="">--
-    </div>
+  <body>
     <header class="name">
-      
-      <div class = "avatar">
-        <img src="images/a7YDgXRU2H4.jpg" style="border-radius: 50px; width: 100; height:100px">
-        <!--<div class="gmail"><img  src="images/1499955332gmail-icon-logo-png.png" width="75px"height="50px"  ></div>-->
+      <div class="avatar" >
+        <img 
+        id="main"
+          src="images/a7YDgXRU2H4.jpg"
+          style="border-radius: 150px; width: 300; height: 300px"
+        />
       </div>
 
-       <h1 id="main">Максим Сыров</h1>
-       <div class="bio">
-         <h3>C/С++ developer and C4D designer </h3>
-       </div>
+      <h1 >Максим Сыров</h1>
+      <div class="bio">
+        <h3>C/С++ developer and C4D designer</h3>
+      </div>
     </header>
     <main>
       <div id="menu">
-        <ul >
-            <li >Главная страница</li>
-            <li><a href = "#contacts" style="color: white">Контакты</a></li>
-            <li><a href = "#prizes" style="color: white">Достижения</a></li>
+        <ul>
+          <li>Главная страница</li>
+          <li><a href="#contacts" style="color: white">Контакты</a></li>
+          <li><a href="#prizes" style="color: white">Достижения</a></li>
         </ul>
       </div>
-      <section>
-        
-      </section>
+      <section></section>
       <h2 id="prizes">Достижения</h2>
       <div class="images">
-         <img src="klein_bottle_2.jpg" alt="" width="396"height="204">
-         <img src="asos watch final render 2.jpg" alt="" width="396"height="204">
-         <img src="black.jpg" alt="" width="204"height="204">
+        <img src="klein_bottle_2.jpg" alt="" width="396" height="204" />
+        <img
+          src="asos watch final render 2.jpg"
+          alt=""
+          width="396"
+          height="204"
+        />
+        <img src="black.jpg" alt="" width="204" height="204" />
       </div>
-      <table  width="200" border="1" align="center" >
+      <table width="200" border="1" align="center">
         <tr>
-        <td>Компания</td>
-        <td>Деятельность</td>
+          <td>Компания</td>
+          <td>Деятельность</td>
         </tr>
         <tr>
           <td>Yandex</td>
           <td>Доставка еды в срок</td>
-          </tr>
+        </tr>
         <tr>
           <td>Типографический центр Colorred</td>
           <td>CS Photoshop для печати фотографий</td>
@@ -61,17 +66,18 @@
       </table>
       <figure>
         <div class="tetris">
-          <img src="tetris.jpg" alt="" width="404"height="500">
+          <img src="tetris.jpg" alt="" width="404" height="500" />
         </div>
-      <figcaption>Самописный тетрис на С языке</figcaption>
-     </figure>
+        <figcaption>Самописный тетрис на С языке</figcaption>
+      </figure>
     </main>
-    <footer id ="contacts">
-       <ul >
+    <footer id="contacts">
+      <ul>
         <li>Телефон: 89876310578</li>
-        <li>Почта: surovmax03@gmail.com </li>
-       </ul>
-       <a href ="#main" style="color: white">На главную</a>
+        <li>Почта: surovmax03@gmail.com</li>
+      </ul>
+      <a href="#main" style="color: white">На главную</a>
+      <div class="copyright">&copy;Сыров.М.Е, 2022</div>
     </footer>
   </body>
 </html>
