--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -15,7 +15,7 @@
     <header class="name">
       <div class="avatar" >
         <img 
-        id="main"
+          id="main"
           src="images/a7YDgXRU2H4.jpg"
           style="border-radius: 150px; width: 300; height: 300px"
         />
@@ -32,18 +32,14 @@
           <li>Главная страница</li>
           <li><a href="#contacts" style="color: white">Контакты</a></li>
           <li><a href="#prizes" style="color: white">Достижения</a></li>
+          <li><a href="https://moximilian.github.io/Syrov-211-361-web-dev-2022-1/Lab2/form1.html" style="color: white">Форма аутентифицаии</a></li>
+          <li><a href="https://moximilian.github.io/Syrov-211-361-web-dev-2022-1/Lab2/form2.html" style="color: white">Форма обратной связи</a></li>
         </ul>
       </div>
-      <section></section>
       <h2 id="prizes">Достижения</h2>
       <div class="images">
         <img src="klein_bottle_2.jpg" alt="" width="396" height="204" />
-        <img
-          src="asos watch final render 2.jpg"
-          alt=""
-          width="396"
-          height="204"
-        />
+        <img src="asos watch final render 2.jpg"alt="" width="396" height="204"/>
         <img src="black.jpg" alt="" width="204" height="204" />
       </div>
       <table width="200" border="1" align="center">
