--- a/Lab2/form1.html
+++ b/Lab2/form1.html
@@ -13,10 +13,21 @@
   </head>
   <body class="f1" >
     <header>
-       <h1>Форма аутентифицаии</h1>
-       <a href="form2.html">Форма обратной связи</a><br>
-       <a href="https://moximilian.github.io/Syrov-211-361-web-dev-2022-1/Lab1/index.html">Лабораторная работа №1</a>
-
+      <div class="avatar" >
+        <img 
+          id="main"
+          src="pics/a7YDgXRU2H4.jpg"
+          style="border-radius: 150px; width: 300; height: 300px"
+        />
+      </div>
+      <h1 >Максим Сыров</h1>
+      
+      <div class="bio">
+        <h3>C/С++ developer and C4D designer</h3>
+      </div>
+       <a href="form2.html" style="color: white">Обратная связь</a><br>
+       <a href="https://moximilian.github.io/Syrov-211-361-web-dev-2022-1/Lab1/index.html" style="color: white">Лабораторная работа №1</a><br>
+       <h2>Форма аутентифицаии</h2>
     </header>
     <main >
       
